--- a/pm20120412/index.html
+++ b/pm20120412/index.html
@@ -40,17 +40,21 @@
 <section class="slide" id="why-would-i">
   <h2>Why would I want to do that?</h2>
   <ul>
-    <li>
+    <li class="slide">
       <h3>Enables use of thinner webservers</h3>
       <p>Nginx does not support CGI natively.</p>
     </li>
-    <li>
+    <li class="slide">
       <h3>Combine applications</h3>
-      <p>Tie legacy CGI applications together or combine with PSGI apps.</p>
+      <p>Tie legacy applications together or combine with PSGI apps.</p>
     </li>
-    <li>
+    <li class="slide">
+      <h3>Apply Middleware</h3>
+      <p>Take advantage of the growing library of Plack::Middleware components.</p>
+    </li>
+    <li class="slide">
       <h3>Speed!</h3>
-      <p>Startup penalty is incurred only once rather than upon each request.</p>
+      <p>Pay startup penalty only once rather than upon each request.</p>
     </li>
   </ul>
 </section>
@@ -158,13 +162,17 @@ builder {
 
 <section class="slide" id="variable-scope">
   <h2>Variable Scope</h2>
-  <p>CGI::Compile turns scripts into a dynamically named package, changing the scope. Globals declared with "my" in compiled scripts will not be accessible to subroutines declared in the same. Must use "our" to declare them (or pass in as a parameter, of course).</p>
+  <p>CGI::Compile turns script contents into a dynamically named package. This changes the scope. Globals declared with "my" in compiled scripts will not be accessible to subroutines declared in the same. Must use "our" to declare them (or pass in as a parameter, of course).</p>
   <p><code><pre>
+#!/usr/bin/env perl
+
 my $query = CGI-&gt;new();
 
 sub get_foo {
     return $query-&gt;param('foo');
 }
+
+...
 </pre></code></p>
 </section>
 
@@ -187,95 +195,6 @@ sub initialize {
 
 <section class="slide" id="variable-mutation">
   <h1>Fin</h1>
-</section>
-
-<section class="slide" id="themes">
-  <h2>Style Themes</h2>
-  <p>Customizes the colors, typography, and layout of slide&nbsp;content.</p>
-  <pre><code>&lt;link rel=&quot;stylesheet&quot; href=&quot;/path/to/css/style-theme.css&quot;&gt;</code></pre>
-  <h2>Transition Themes</h2>
-  <p>Defines transitions between slides using CSS3 transitions.  Less capable browsers fall back to cutaways. But <strong>you</strong> aren&rsquo;t using <em>those</em> browsers to give your presentations, are&nbsp;you&hellip;</p>
-  <pre><code>&lt;link rel=&quot;stylesheet&quot; href=&quot;/path/to/css/transition-theme.css&quot;&gt;</code></pre>
-</section>
-
-<section class="slide" id="extensions">
-  <h2>Extensions</h2>
-  <p>Core gives you basic slide functionality with left and right arrow navigation, but you may want more. Here are the ones included in this&nbsp;deck:</p>
-	
-  <ul>
-    <li class="slide" id="extensions-goto">
-      <strong>deck.goto</strong>: Adds a shortcut key to jump to any slide number.  Hit g, type in the slide number, and hit&nbsp;enter.
-    </li>
-		
-    <li class="slide" id="extensions-hash">
-      <strong>deck.hash</strong>: Enables internal linking within slides, deep linking to individual slides, and updates the address bar &amp; a permalink anchor with each slide&nbsp;change.
-    </li>
-
-    <li class="slide" id="extensions-menu">
-      <strong>deck.menu</strong>: Adds a menu view, letting you see all slides in a grid. Hit m to toggle to menu view, continue navigating your deck, and hit m to return to normal view. Touch devices can double-tap the deck to switch between&nbsp;views.
-    </li>
-
-    <li class="slide" id="extensions-navigation">
-      <strong>deck.navigation</strong>: Adds clickable left and right buttons for the less keyboard&nbsp;inclined.
-    </li>
-
-    <li class="slide" id="extensions-status">
-      <strong>deck.status</strong>: Adds a page number indicator. (current/total)
-    </li>
-  </ul>
-	
-  <p class="slide" id="extension-folders">Each extension folder in the download package contains the necessary JavaScript, CSS, and HTML&nbsp;files. For a complete list of extension modules included in deck.js, check out the&nbsp;<a href="http://imakewebthings.github.com/deck.js/docs">documentation</a>.</p>
-</section>
-
-<section class="slide" id="nested">
-  <h2>Nested Slides</h2>
-  <p>That last slide had a few steps.  To create substeps in slides, just nest them:</p>
-  <pre><code>&lt;section class=&quot;slide&quot;&gt;
-  &lt;h2&gt;Extensions&lt;/h2&gt;
-  &lt;p&gt;Core gives you basic slide functionality...&lt;/p&gt;		
-  &lt;ul&gt;
-     &lt;li class=&quot;slide&quot;&gt;
-        &lt;h3&gt;deck.goto&lt;/h3&gt;
-        &lt;p&gt;Adds a shortcut key to jump to any slide number...&lt;/p&gt;
-     &lt;/li&gt;
-     &lt;li class=&quot;slide&quot;&gt;...&lt;/li&gt;	
-     &lt;li class=&quot;slide&quot;&gt;...&lt;/li&gt;
-     &lt;li class=&quot;slide&quot;&gt;...&lt;/li&gt;
-  &lt;/ul&gt;
-&lt;/section&gt;</code></pre>
-</section>
-
-<section class="slide" id="elements-images">
-  <h2>Other Elements: Images</h2>
-  <img src="http://placekitten.com/600/375" alt="Kitties">
-  <pre><code>&lt;img src=&quot;http://placekitten.com/600/375&quot; alt=&quot;Kitties&quot;&gt;</code></pre>
-</section>
-
-<section class="slide" id="elements-blockquotes">
-  <h2>Other Elements: Blockquotes</h2>
-  <blockquote cite="http://example.org">
-    <p>Food is an important part of a balanced diet.</p>
-    <p><cite>Fran Lebowitz</cite></p>
-  </blockquote>
-  <pre><code>&lt;blockquote cite=&quot;http://example.org&quot;&gt;
-  &lt;p&gt;Food is an important part of a balanced diet.&lt;/p&gt;
-  &lt;p&gt;&lt;cite&gt;Fran Lebowitz&lt;/cite&gt;&lt;/p&gt;
-&lt;/blockquote&gt;</code></pre>
-</section>
-
-
-<section class="slide" id="elements-videos">
-  <h2>Other Elements: Video Embeds</h2>
-  <p>Embed videos from your favorite online video service or with an HTML5 video&nbsp;element.</p>
-	
-  <iframe src="http://player.vimeo.com/video/1063136?title=0&amp;byline=0&amp;portrait=0" width="400" height="225" frameborder="0"></iframe>
-	
-  <pre><code>&lt;iframe src=&quot;http://player.vimeo.com/video/1063136?title=0&amp;amp;byline=0&amp;amp;portrait=0&quot; width=&quot;400&quot; height=&quot;225&quot; frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;</code></pre>
-</section>
-
-<section class="slide" id="digging-deeper">
-  <h2>Digging Deeper</h2>
-  <p>If you want to learn about making your own themes, extending deck.js, and more, check out the&nbsp;<a href="../docs/">documentation</a>.</p>
 </section>
 
 <!-- deck.navigation snippet -->
